--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "fix-rollup": "node rollup-fix.js",
+    "fix-rollup": "node rollup-fix.cjs",
     "prebuild": "npm run fix-rollup",
     "build": "tsc && vite build",
     "vercel-build": "npm run fix-rollup && tsc && vite build",
@@ -33,6 +33,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.37.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
